--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -3,7 +3,7 @@
     android:padding="10dp"
     android:shape="rectangle"
     >
-    <solid android:color="@color/white"></solid>
+    <solid android:color="@color/PColor2"></solid>
     <corners
         android:bottomLeftRadius="30dp"
         android:bottomRightRadius="30dp"
