--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -86,13 +86,14 @@
                                 android:adjustViewBounds="true"
                                 android:layout_weight="0.1"
                                 android:scaleType="fitCenter"
-                                android:src="@drawable/food1">
+                                android:src="@drawable/loading">
                             </ImageView>
                             <TextView
+                                android:id="@+id/tv_foodName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
-                                android:text="음식이름"
+                                android:text=""
                                 android:textSize="18sp"
                                 android:textColor="@color/black"></TextView>
                         </LinearLayout>
