--- a/app/src/main/res/layout/sidebar_view.xml
+++ b/app/src/main/res/layout/sidebar_view.xml
@@ -9,6 +9,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:Context=".SidebarActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
@@ -280,13 +281,14 @@
                         android:layout_weight="0.9"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"></LinearLayout>
+
                     <Button
                         android:id="@+id/btn_record"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
+                        android:background="#00ff0000"
                         android:text="더보기"
-                        android:textColor="@color/black"
-                        android:background="#00ff0000"/>
+                        android:textColor="@color/black" />
 
 
                 </LinearLayout>
@@ -335,7 +337,7 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal"></LinearLayout>
                     <Button
-                        android:id="@+id/btn_the_look2"
+                        android:id="@+id/btn_notice"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:text="더보기"
